Fix filter count badges not showing when sticky
Added overflow: visible to scrolled bar to prevent badges from being
clipped by the full-width breakout margins.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -732,6 +732,7 @@ mark[data-pagefind-highlight],
     margin-right: calc(-50vw + 50%);
     padding-left: calc(50vw - 50%);
     padding-right: calc(50vw - 50%);
+    overflow: visible;
   }
 
   /* Filter controls slide-in animation */
